rerun gihub runner

--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -41,26 +41,36 @@ jobs:
       - name: Deploy frontend on EC2
         env:
           REACT_APP_API: ${{ secrets.REACT_APP_API }}
+
         run: |
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/gh-ec2-ci \
-            ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} \
-            "set -e
-             cd /var/www/meditation-frontend/Personalised-Visual-Meditation-Guide-Frontend &&
-             echo 'Pulling latest code...' &&
-             git fetch --all &&
-             git reset --hard origin/main &&
-             echo 'Cleaning cache and node_modules...' &&
-             rm -rf node_modules package-lock.json &&
-             npm cache clean --force || true &&
-             echo 'Installing dependencies...' &&
-             npm install --force &&
-             echo 'Writing .env...' &&
-             echo \"REACT_APP_API=$REACT_APP_API\" > .env &&
-             cat .env &&
-             echo 'Building React app (build/)...' &&
-             npm install --save-dev ajv@^7 &&
-             npm run build &&
-             echo 'Reloading nginx...' &&
-             sudo nginx -t &&
-             sudo systemctl reload nginx &&
-             echo '✨ Frontend deployed successfully!'"
+            ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+          set -e
+
+          cd /var/www/meditation-frontend/Personalised-Visual-Meditation-Guide-Frontend
+
+          echo "Pulling latest code..."
+          git fetch --all
+          git reset --hard origin/main
+
+          echo "Cleaning cache and node_modules..."
+          rm -rf node_modules package-lock.json
+          npm cache clean --force || true
+
+          echo "Installing dependencies..."
+          npm install --force
+
+          echo "Writing .env..."
+          echo "REACT_APP_API=${REACT_APP_API}" > .env
+          cat .env
+
+          echo "Building React app (build/)..."
+          npm install --save-dev ajv@^7
+          npm run build
+
+          echo "Reloading nginx..."
+          sudo nginx -t
+          sudo systemctl reload nginx
+
+          echo "Frontend deployed successfully"
+          EOF
