rerun gihub runner

--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -47,8 +47,12 @@ jobs:
             ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
           set -e
 
-          cd /var/www/meditation-frontend/Personalised-Visual-Meditation-Guide-Frontend
+      - name: Deploy frontend on nginx
+        env:
+          REACT_APP_API: ${{ secrets.REACT_APP_API }}
+        working-directory: cd /var/www/meditation-frontend/Personalised-Visual-Meditation-Guide-Frontend
 
+        run: |
           echo "Pulling latest code..."
           git fetch --all
           git reset --hard origin/main
