--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -60,9 +60,9 @@ jobs:
 
       - name: Upload build folder to EC2
         run: |
-          scp -o StrictHostKeyChecking=no -i ~/.ssh/gh-ec2-ci -r build/* \
-          ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/var/www/meditation-frontend/Personalised-Visual-Meditation-Guide-Frontend/build/
-
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/gh-ec2-ci \
+             ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << EOF
+               set -e
       - name: Restart Nginx on EC2
         run: |
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/gh-ec2-ci \
