--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -53,8 +53,6 @@ jobs:
         env:
           REACT_APP_API: ${{ secrets.REACT_APP_API }}
 
-      # --- Deployment Steps using SSH Agent ---
-
       - name: 🔑 Set up SSH Agent
         uses: webfactory/ssh-agent@v0.9.1
         with:
@@ -66,7 +64,7 @@ jobs:
 
       - name: ⬆️ Upload build folder to EC2
         run: |
-          scp -r build/ ${{ env.EC2_USER }}@${{ env.EC2_HOST }}:/var/www/meditation-frontend/Personalised-Visual-Meditation-Guide-Frontend/build
+          scp -r build/ ${{ env.EC2_USER }}@${{ env.EC2_HOST }}:build/
 
       - name: 🔁 Restart Nginx on EC2
         run: |
