--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -61,6 +61,14 @@ jobs:
         run: |
           ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
 
+      - name: 🔐 Fix SSH Permissions on EC2
+        run: |
+          # The entire run block is executed as a single SSH session on the EC2 host.
+          ssh ${{ env.EC2_USER }}@${{ env.EC2_HOST }} \
+          "echo 'Fixing key file permissions...' && \
+           chmod 700 ~/.ssh && \
+           chmod 600 ~/.ssh/authorized_keys"
+
       - name: ⬆️ Upload build folder to EC2
         run: |
           scp -r build/ ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:"/var/www/meditation-frontend/Personalised-Visual-Meditation-Guide-Frontend/build/"
