--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -1,11 +1,10 @@
-name: 🚀 Deploy REACT App on nginx
+name: Deploy REACT App on nginx
 
 on:
   push:
     branches:
       - main
 
-# Permissions are good, but I've removed 'issues: write' as it's not needed for deployment
 permissions:
   id-token: write
   contents: read
@@ -13,9 +12,8 @@ permissions:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    environment: PROD_FRONTEND_ENV # Good to keep for security
+    environment: PROD_FRONTEND_ENV
 
-    # Define environment variables once
     env:
       NODE_VERSION: "22.x"
       REACT_APP_API: ${{ secrets.REACT_APP_API }}
@@ -25,19 +23,19 @@ jobs:
       REMOTE_PATH: /var/www/meditation-frontend/Personalised-Visual-Meditation-Guide-Frontend/
 
     steps:
-      - name: ⬇️ Checkout code
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: ⚙️ Setup Node.js ${{ env.NODE_VERSION }}
+      - name: Setup Node.js ${{ env.NODE_VERSION }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: npm
 
-      - name: 📦 Install dependencies
+      - name: Install dependencies
         run: npm install --legacy-peer-deps
 
-      - name: 🏗️ Build frontend (creates build/)
+      - name: Build frontend (creates build/)
         run: |
           npm run build
           # Add commands to verify the output folder
@@ -52,16 +50,16 @@ jobs:
         env:
           REACT_APP_API: ${{ secrets.REACT_APP_API }}
 
-      - name: 🔑 Set up SSH Agent
+      - name: Set up SSH Agent
         uses: webfactory/ssh-agent@v0.9.1
         with:
           ssh-private-key: ${{ secrets.EC2_SSH_KEY}}
 
-      - name: 📝 Add EC2 Host to known_hosts
+      - name: Add EC2 Host to known_hosts
         run: |
           ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
 
-      - name: 🔐 Fix SSH Permissions on EC2
+      - name: Fix SSH Permissions on EC2
         run: |
           # The entire run block is executed as a single SSH session on the EC2 host.
           ssh ${{ env.EC2_USER }}@${{ env.EC2_HOST }} \
@@ -69,11 +67,11 @@ jobs:
            chmod 700 ~/.ssh && \
            chmod 600 ~/.ssh/authorized_keys"
 
-      - name: ⬆️ Upload build folder to EC2
+      - name: Upload build folder to EC2
         run: |
           scp -r build/ ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:"/var/www/meditation-frontend/Personalised-Visual-Meditation-Guide-Frontend/"
 
-      - name: 🔁 Restart Nginx on EC2
+      - name: Restart Nginx on EC2
         run: |
           ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} \
           "sudo nginx -t && sudo systemctl reload nginx"
