--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,29 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
+    "target": "ES5",
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "jsx": "react-jsx",
+
+    "strict": true,
     "skipLibCheck": true,
+    "noEmit": true,
+    "isolatedModules": true,
+
+    "module": "ESNext",
+    "moduleResolution": "Node",
+
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "strict": true,
+    "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx",
-    "types": ["vite/client"]
+
+    "baseUrl": "src",
+    "paths": {
+      "shared/*": ["shared/*"],
+      "features/*": ["features/*"],
+      "app/*": ["app/*"]
+    }
   },
-  "include": ["src", "src/index.tsx"]
+  "include": ["src"]
 }
